maybe but not yet

--- a/new/index.html
+++ b/new/index.html
@@ -136,7 +136,7 @@
 					<div class="badge {{this.id}}" onclick="this.toggleClass('active')">
 						<div class="face front">
 							<img src="img/badges/{{this.id}}.png">
-							<p>share</p>
+							<!--<p>share</p>-->
 						</div>
 						<div class="face back">
 							<h2>{{this.title}}</h2>
