--- a/new/index.html
+++ b/new/index.html
@@ -142,10 +142,10 @@
 							<h2>{{this.title}}</h2>
 							<p>{{this.description}}</p>
 							<ul>
+								<!--<li><img src="img/social/rim.png" width="25" height="25"><a href="javascript:;"></a></li>
 								<li><img src="img/social/facebook.png" width="25" height="25"><a href="javascript:;"></a></li>
 								<li><img src="img/social/twitter.png" width="25" height="25"><a href="javascript:;"></a></li>
-								<li><img src="img/social/google.png" width="25" height="25"><a href="javascript:;"></a></li>
-								<li><img src="img/social/rim.png" width="25" height="25"><a href="javascript:;"></a></li>
+								<li><img src="img/social/google.png" width="25" height="25"><a href="javascript:;"></a></li>-->
 							</ul>
 						</div>
 					</div>
